# win32-remove-dir-all

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: lib.rs
src/windows/: mod.rs  property.rs  shell.rs  tests.rs
